--- a/functional/package.json
+++ b/functional/package.json
@@ -8,7 +8,7 @@
   },
   
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test":  "testcafe chrome --hostname localhost  tests/homepagetest.js -e"
   },
   "author": "",
   "skipJsErrors": true,
